// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Cascader/demo/basic.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          placeholder="Please select ..."
          style="width:100%;pointer-events:none"
          tabindex="-1"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          placeholder="Hover to expand"
          style="width:100%;pointer-events:none"
          tabindex="-1"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/change_on_select.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          placeholder="Please select ..."
          style="width:100%"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder="Please select ..."
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              >
                Please select ...
              </span>
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/clear.md correctly 1`] = `
<div
  class="arco-cascader arco-cascader-single arco-cascader-size-default"
  style="width:300px"
  tabindex="0"
>
  <div
    class="arco-cascader-view"
    title="Shanghai / Shanghai / Huangpu"
  >
    <input
      autocomplete="off"
      class="arco-cascader-view-input arco-cascader-hidden"
      placeholder="Please select ..."
      style="width:100%;pointer-events:none"
      tabindex="-1"
      value="Shanghai / Shanghai / Huangpu"
    />
    <span
      class="arco-cascader-view-value"
    >
      Shanghai / Shanghai / Huangpu
    </span>
    <div
      class="arco-cascader-suffix"
    >
      <span
        class="arco-icon-hover arco-cascader-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <div
        class="arco-cascader-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/control.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          placeholder="Please select ..."
          style="width:100%"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder="Please select ..."
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              >
                Please select ...
              </span>
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/custom_children.md correctly 1`] = `
<div>
  <span
    class="arco-typography"
  >
    City
  </span>
  <span
    class="arco-link"
  >
    Shanghai, Shanghai, Huangpu
  </span>
</div>
`;

exports[`renders Cascader/demo/disabled.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-start"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title="Beijing / Beijing / Dongcheng / Chaoyangmen"
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input arco-cascader-hidden"
          placeholder="Beijing / Beijing / Dongcheng / Chaoyangmen"
          style="width:100%"
          value="Beijing / Beijing / Dongcheng / Chaoyangmen"
        />
        <span
          class="arco-cascader-view-value"
        >
          Beijing / Beijing / Dongcheng / Chaoyangmen
        </span>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <div
                class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
              >
                <span
                  class="arco-input-tag-tag-content"
                  title="Beijing / Beijing / Dongcheng / Chaoyangmen"
                >
                  Beijing / Beijing / Dongcheng / Chaoyangmen
                </span>
              </div>
              <div
                class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
              >
                <span
                  class="arco-input-tag-tag-content"
                  title="Beijing / Beijing / Dongcheng / Jianguomen"
                >
                  Beijing / Beijing / Dongcheng / Jianguomen
                </span>
              </div>
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder=""
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              />
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/dropdown.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-size-default"
      style="width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          placeholder="Please select ..."
          style="width:100%;pointer-events:none"
          tabindex="-1"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-size-default"
      style="width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          style="width:100%;pointer-events:none"
          tabindex="-1"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/filedNames.md correctly 1`] = `
<div>
  <div
    class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
    style="width:300px"
    tabindex="0"
  >
    <div
      class="arco-cascader-view"
      title=""
    >
      <div
        class="arco-input-tag arco-input-tag-size-default"
      >
        <div
          class="arco-input-tag-view"
        >
          <div
            class="arco-input-tag-inner"
          >
            <div
              class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
            >
              <span
                class="arco-input-tag-tag-content"
                title="Beijing / Beijing / Chaoyang / Datunli"
              >
                Beijing / Beijing / Chaoyang / Datunli
              </span>
              <span
                aria-label="Close"
                class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-close"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                  />
                </svg>
              </span>
            </div>
            <input
              autocomplete="off"
              class="arco-input-tag-input arco-input-tag-input-size-default"
              placeholder=""
              value=""
            />
            <span
              class="arco-input-tag-input-mirror"
            />
          </div>
        </div>
      </div>
      <div
        class="arco-cascader-suffix"
      >
        <span
          class="arco-icon-hover arco-cascader-clear-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-close"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
            />
          </svg>
        </span>
        <div
          class="arco-cascader-expand-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-expand"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            style="transform:rotate(-45deg)"
            viewBox="0 0 48 48"
          >
            <path
              d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/filter_option.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title="Shanghai / Shanghai / Huangpu"
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input arco-cascader-hidden"
          placeholder="Shanghai / Shanghai / Huangpu"
          style="width:100%"
          value="Shanghai / Shanghai / Huangpu"
        />
        <span
          class="arco-cascader-view-value"
        >
          Shanghai / Shanghai / Huangpu
        </span>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <div
                class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
              >
                <span
                  class="arco-input-tag-tag-content"
                  title="Beijing / Beijing / Chaoyang / Datunli"
                >
                  Beijing / Beijing / Chaoyang / Datunli
                </span>
                <span
                  aria-label="Close"
                  class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="arco-icon arco-icon-close"
                    fill="none"
                    focusable="false"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                  >
                    <path
                      d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                    />
                  </svg>
                </span>
              </div>
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder=""
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              />
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/footer.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="max-width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title="Shanghai / Shanghai / Huangpu"
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input arco-cascader-hidden"
          placeholder="Shanghai / Shanghai / Huangpu"
          style="width:100%"
          value="Shanghai / Shanghai / Huangpu"
        />
        <span
          class="arco-cascader-view-value"
        >
          Shanghai / Shanghai / Huangpu
        </span>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="max-width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <div
                class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
              >
                <span
                  class="arco-input-tag-tag-content"
                  title="Beijing / Beijing / Chaoyang / Datunli"
                >
                  Beijing / Beijing / Chaoyang / Datunli
                </span>
                <span
                  aria-label="Close"
                  class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="arco-icon arco-icon-close"
                    fill="none"
                    focusable="false"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                  >
                    <path
                      d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                    />
                  </svg>
                </span>
              </div>
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder=""
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              />
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/format.md correctly 1`] = `
<div
  class="arco-cascader arco-cascader-single arco-cascader-size-default"
  style="width:300px"
  tabindex="0"
>
  <div
    class="arco-cascader-view"
    title="Shanghai > Shanghai > Huangpu"
  >
    <input
      autocomplete="off"
      class="arco-cascader-view-input arco-cascader-hidden"
      placeholder="Please select ..."
      style="width:100%;pointer-events:none"
      tabindex="-1"
      value="Shanghai > Shanghai > Huangpu"
    />
    <span
      class="arco-cascader-view-value"
    >
      Shanghai &gt; Shanghai &gt; Huangpu
    </span>
    <div
      class="arco-cascader-suffix"
    >
      <span
        class="arco-icon-hover arco-cascader-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <div
        class="arco-cascader-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/loadmore.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          placeholder="Please select ..."
          style="width:100%"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder="Please select ..."
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              >
                Please select ...
              </span>
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/multiple.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <div
                class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
              >
                <span
                  class="arco-input-tag-tag-content"
                  title="Beijing / Beijing / Chaoyang / Datunli"
                >
                  Beijing / Beijing / Chaoyang / Datunli
                </span>
                <span
                  aria-label="Close"
                  class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="arco-icon arco-icon-close"
                    fill="none"
                    focusable="false"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                  >
                    <path
                      d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                    />
                  </svg>
                </span>
              </div>
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder=""
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              />
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder="Please select ..."
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              >
                Please select ...
              </span>
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/onSearch.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder="Please enter ..."
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              >
                Please enter ...
              </span>
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/render_option.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title="Shanghai / Shanghai / Huangpu"
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input arco-cascader-hidden"
          placeholder="Shanghai / Shanghai / Huangpu"
          style="width:100%"
          value="Shanghai / Shanghai / Huangpu"
        />
        <span
          class="arco-cascader-view-value"
        >
          Shanghai / Shanghai / Huangpu
        </span>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <div
                class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
              >
                <span
                  class="arco-input-tag-tag-content"
                  title="Beijing / Beijing / Chaoyang / Datunli"
                >
                  Beijing / Beijing / Chaoyang / Datunli
                </span>
                <span
                  aria-label="Close"
                  class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="arco-icon arco-icon-close"
                    fill="none"
                    focusable="false"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                  >
                    <path
                      d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                    />
                  </svg>
                </span>
              </div>
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder=""
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              />
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/search.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title="Shanghai / Shanghai / Huangpu"
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input arco-cascader-hidden"
          placeholder="Shanghai / Shanghai / Huangpu"
          style="width:100%"
          value="Shanghai / Shanghai / Huangpu"
        />
        <span
          class="arco-cascader-view-value"
        >
          Shanghai / Shanghai / Huangpu
        </span>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <div
                class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag arco-cascader-tag"
              >
                <span
                  class="arco-input-tag-tag-content"
                  title="Beijing / Beijing / Chaoyang / Datunli"
                >
                  Beijing / Beijing / Chaoyang / Datunli
                </span>
                <span
                  aria-label="Close"
                  class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="arco-icon arco-icon-close"
                    fill="none"
                    focusable="false"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                  >
                    <path
                      d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                    />
                  </svg>
                </span>
              </div>
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder=""
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              />
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <span
            class="arco-icon-hover arco-cascader-clear-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/showEmptyChildren.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:20px"
  >
    <label
      class="arco-checkbox"
    >
      <input
        type="checkbox"
      />
      <span
        class="arco-icon-hover arco-checkbox-icon-hover arco-checkbox-mask-wrapper"
      >
        <div
          class="arco-checkbox-mask"
        >
          <svg
            aria-hidden="true"
            class="arco-checkbox-mask-icon"
            fill="currentColor"
            focusable="false"
            height="200"
            viewBox="0 0 1024 1024"
            width="200"
          >
            <path
              d="M877.44815445 206.10060629a64.72691371 64.72691371 0 0 0-95.14856334 4.01306852L380.73381888 685.46812814 235.22771741 533.48933518a64.72691371 64.72691371 0 0 0-92.43003222-1.03563036l-45.82665557 45.82665443a64.72691371 64.72691371 0 0 0-0.90617629 90.61767965l239.61903446 250.10479331a64.72691371 64.72691371 0 0 0 71.19960405 15.14609778 64.33855261 64.33855261 0 0 0 35.08198741-21.23042702l36.24707186-42.71976334 40.5190474-40.77795556-3.36579926-3.49525333 411.40426297-486.74638962a64.72691371 64.72691371 0 0 0-3.88361443-87.64024149l-45.3088404-45.43829334z"
              p-id="840"
            />
          </svg>
        </div>
      </span>
      <span
        class="arco-checkbox-text"
      >
        showEmptyChildren
      </span>
    </label>
  </div>
  <div
    class="arco-cascader arco-cascader-single arco-cascader-show-search arco-cascader-size-default"
    style="width:300px"
    tabindex="0"
  >
    <div
      class="arco-cascader-view"
      title=""
    >
      <input
        autocomplete="off"
        class="arco-cascader-view-input"
        placeholder="Please select ..."
        style="width:100%"
        value=""
      />
      <span
        class="arco-cascader-view-value arco-cascader-hidden"
      />
      <div
        class="arco-cascader-suffix"
      >
        <div
          class="arco-cascader-expand-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-expand"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            style="transform:rotate(-45deg)"
            viewBox="0 0 48 48"
          >
            <path
              d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/size.md correctly 1`] = `
<div>
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    style="margin-bottom:20px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="mini"
      />
      <span
        class="arco-radio-button-inner"
      >
        mini
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="small"
      />
      <span
        class="arco-radio-button-inner"
      >
        small
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="size"
        type="radio"
        value="default"
      />
      <span
        class="arco-radio-button-inner"
      >
        default
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="large"
      />
      <span
        class="arco-radio-button-inner"
      >
        large
      </span>
    </label>
  </div>
  <div>
    <div
      class="arco-cascader arco-cascader-single arco-cascader-size-default"
      style="width:300px;margin-bottom:20px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <input
          autocomplete="off"
          class="arco-cascader-view-input"
          placeholder="Please select ..."
          style="width:100%;pointer-events:none"
          tabindex="-1"
          value=""
        />
        <span
          class="arco-cascader-view-value arco-cascader-hidden"
        />
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <br />
    <div
      class="arco-cascader arco-cascader-multiple arco-cascader-show-search arco-cascader-size-default"
      style="width:300px"
      tabindex="0"
    >
      <div
        class="arco-cascader-view"
        title=""
      >
        <div
          class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
        >
          <div
            class="arco-input-tag-view"
          >
            <div
              class="arco-input-tag-inner"
            >
              <input
                autocomplete="off"
                class="arco-input-tag-input arco-input-tag-input-size-default"
                placeholder="Please select ..."
                value=""
              />
              <span
                class="arco-input-tag-input-mirror"
              >
                Please select ...
              </span>
            </div>
          </div>
        </div>
        <div
          class="arco-cascader-suffix"
        >
          <div
            class="arco-cascader-expand-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-expand"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="transform:rotate(-45deg)"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Cascader/demo/visible.md correctly 1`] = `
<div>
  <p>
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      style="margin-right:20px"
      type="button"
    >
      <span>
        Show Menu
      </span>
    </button>
  </p>
  <div
    class="arco-cascader arco-cascader-single arco-cascader-size-default"
    style="width:300px"
    tabindex="0"
  >
    <div
      class="arco-cascader-view"
      title=""
    >
      <input
        autocomplete="off"
        class="arco-cascader-view-input"
        placeholder="Please select ..."
        style="width:100%;pointer-events:none"
        tabindex="-1"
        value=""
      />
      <span
        class="arco-cascader-view-value arco-cascader-hidden"
      />
      <div
        class="arco-cascader-suffix"
      >
        <div
          class="arco-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-down"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M39.6 17.443 24.043 33 8.487 17.443"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
